Reverted some recent list formatting changes that were causing flickering of action on hover. Added a stopPropogation() call to the menu open click handler so that it can be used within a list.

--- a/views/mdc/assets/scss/components/list.scss
+++ b/views/mdc/assets/scss/components/list.scss
@@ -1,11 +1,6 @@
 @import "@material/list/mdc-list";
 @import "@material/theme/mixins";
 
-.v-list-content {
-  display: inline;
-  width: 100%;
-}
-
 .v-list-item--with-avatar {
   @include mdc-theme-prop(color, white);
   @include mdc-theme-prop(background-color, text-icon-on-background);
